--- a/cv/index.html
+++ b/cv/index.html
@@ -1,5 +1,5 @@
 ---
-title: CV - Pinheiro-Chagas
+title: CV - Ursula-Tooley
 layout: default
 ---
 
@@ -7,7 +7,7 @@ layout: default
 		<h2>CV</h2>
 
 		<ul>
-		<li><strong>Stanford University, USA</strong> (2018 - present)<br />&nbsp; &nbsp; &nbsp;<em>Postdoctoral scholar</em><br />&nbsp; &nbsp; &nbsp;Sponsor: Josef Parvizi&nbsp;</li>
+		<li><strong>University of Pennsylvania, USA</strong> (2018 - present)<br />&nbsp; &nbsp; &nbsp;<em>Postdoctoral scholar</em><br />&nbsp; &nbsp; &nbsp;Sponsor: Josef Parvizi&nbsp;</li>
 		</ul>
 		<ul>
 		<li><strong>Sorbonne University, France</strong> (2013 - 2017) <br />&nbsp; &nbsp; &nbsp;<em>Ph.D., Cognitive Neuroscience </em> <br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Supervisor:&nbsp;Stanislas Dehaene <br />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Co-supervisor: Manuela Piazza</li>
@@ -18,9 +18,6 @@ layout: default
 		<ul>
 		<li><strong>Federal University of Minas Gerais, Brazil</strong> (2010) <br />&nbsp; &nbsp; &nbsp;<em>B.A., Psychology</em></li>
 		</ul>
-		<p style="text-align: center;"><br />+++ <a class="paper" title="Download full CV" href="CV_Pinheiro-Chagas_10_07_2018.pdf">Download full CV</a> +++</p>	
+		<p style="text-align: center;"><br />+++ <a class="paper" title="Download full CV" href="Ursula_CV_8.10.18.pdf">Download full CV</a> +++</p>
 
 	</div>
-
-
-
