--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
-title: Pedro Pinheiro-Chagas
+title: Ursula A. Tooley
 layout: default
 ---
 
 <div class="blurb">
-	<h2>Pedro Pinheiro-Chagas</h2>
+	<h2>Ursula A. Tooley</h2>
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
 	<img src="/figures/figwebsite2.png" class = "responsive" alt="Pedro">
 
-	<p> I'm a cognitive neuroscientist studying the neural architecture and dynamics of human high-level cognition. My main research goal is to parse and characterize the series of processing stages underlying cognitive operations. I'm particularly interested in <b>elementary mathematics</b>.</p> 
+	<p> I'm a graduate student at the University of Pennsylvania under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Danielle Bassett</b></a>, studying the development of functional brain networks, learning and exploration in childhood, and applications of graph theory. I'm particularly interested in <b>effects of the early environment</b> on brain development.</p>
 
-	<p> I use a combination of machine learning applied to time-resolved brain signals (MEG & intracranial EEG), electrical brain stimulation and continuous behavioral measures 
+	<p> I use a combination of machine learning applied to time-resolved brain signals (MEG & intracranial EEG), electrical brain stimulation and continuous behavioral measures
 	<a href="https://trajtracker.wixsite.com/trajtracker" class="ext" target="_blank">(<b>trajectory-tracking</b>).</a></p>
 
-	<p>I'm a postdoctoral scholar at <a href="https://museum.stanford.edu/exhibitions/rodin-shock-modern-body" class="ext" target="_blank"><b>Stanford University</b></a>, working with <a href="https://scholar.google.com/citations?user=t4XXQ7AAAAAJ&hl=en" class="ext" target="_blank"><b>Josef Parvizi</b></a> at the <a href="http://med.stanford.edu/parvizi-lab/projects.html" class="ext" target="_blank"> Human Intracranial Cognitive Electrophysiology Program</a>. I did my PhD with <a href="https://scholar.google.com/citations?user=2Dd5uoIAAAAJ" class="ext" target="_blank"><b>Stanislas Dehaene</b></a> at 
-	<a href="http://www.unicog.org/site_2016/" class="ext" target="_blank"><b>CEA-NeuroSpin</b></a>, in the outskirts of 
+	<p>I'm a postdoctoral scholar at <a href="https://museum.stanford.edu/exhibitions/rodin-shock-modern-body" class="ext" target="_blank"><b>Stanford University</b></a>, working with <a href="https://scholar.google.com/citations?user=t4XXQ7AAAAAJ&hl=en" class="ext" target="_blank"><b>Josef Parvizi</b></a> at the <a href="http://med.stanford.edu/parvizi-lab/projects.html" class="ext" target="_blank"> Human Intracranial Cognitive Electrophysiology Program</a>. I did my PhD with <a href="https://scholar.google.com/citations?user=2Dd5uoIAAAAJ" class="ext" target="_blank"><b>Stanislas Dehaene</b></a> at
+	<a href="http://www.unicog.org/site_2016/" class="ext" target="_blank"><b>CEA-NeuroSpin</b></a>, in the outskirts of
 	<a href="https://www.patrickroger.com/" class="ext" target="_blank">Paris</a>.</p>
 
 
