Changed publications page, hid index text

--- a/publications/index.html
+++ b/publications/index.html
@@ -1,5 +1,5 @@
 ---
-title: Publications - Pinheiro-Chagas
+title: Publications - Ursula Tooley
 layout: default
 ---
 
@@ -8,52 +8,23 @@ layout: default
 
 	<p><strong>2018</strong></p>
 
-	<p><strong>Pinheiro-Chagas, P.</strong>, Piazza, M., Dehaene, S. (2018). Decoding the processing stages of mental arithmetic with magnetoencephalography. <em>Cortex</em>, S0010-9452(18)30235-1<a href="pinheiro-chagas_decoding_calc_meg.pdf" class="paper" target="_blank">pdf</a></p>
+	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
+Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional brain network development. ArXiv:1807.07687 <em>Under revision</em>, <a href="https://arxiv.org/abs/1807.07687" class="ext" target="_blank">link</a></p>
 
-	<p><strong>Pinheiro-Chagas, P.*</strong>, Daitch, A.*, Parvizi, J., Dehaene, S. (2018). Brain mechanisms of arithmetic: a crucial role for ventral temporal cortex. <em>Journal of Cognitive Neuroscience</em>, 31:1-16. <a href="pinheiro-chagas_ecog_calc.pdf" class="paper" target="_blank">pdf</a></p></p>
-
-	<p>Borghesani*, V., de Hevia*, L., Viarouge*, A., <strong>Pinheiro-Chagas, P.</strong>, Eger, E., Piazza, M. (2018). Processing number and length in the parietal cortex: sharing resources, not a common code. <em>Cortex</em>, S0010-9452(18)30234-X.<a href="borghesani_decoding_number_length_fmri.pdf" class="paper" target="_blank">pdf</a></p>
-
-	<p><strong>Pinheiro-Chagas, P</strong>.*, Dinino, D.*, Haase, V. G., Wood, G., Knops, A. (2018) The developmental trajectory of the operational momentum effect. <em>Frontiers in Psychology</em>, 9, 1062. <a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2018.01062/pdf" class="paper" target="_blank">pdf</a></p>
-
-	<p>Baek, S., Daitch, A., <strong>Pinheiro-Chagas, P</strong>., Parvizi, J. (2018). Neuronal population responses in the human ventral temporal and lateral parietal cortex during arithmetic processing with digits and number words. <em>Journal of Cognitive Neuroscience</em>, 30(9):1315-1322. <a href="baek_daitch_pinheiro-chagas_parvizi_jocn.pdf" class="paper" target="_blank">pdf</a> </p>
-
-	<p>Dresler, T., Bugden, S., Gouet, C., Lallier, M., Oliveira, D., <strong>Pinheiro-Chagas, P.</strong>, Pires, A., Wang, Y., Zugarramurdi, C., Weissheimer, J. (2018). A translational framework of educational neuroscience in learning disorders. <em>Frontiers in Integrative Neuroscience</em>, 12, 25. <a href="https://www.frontiersin.org/articles/10.3389/fnint.2018.00025/pdf" class="paper" target="_blank">pdf</a></p>
-
-	<p><strong>2017</strong></p>
-
-	<p><strong>Pinheiro-Chagas, P., </strong>Dotan, D., Piazza, M., Dehaene, S. (2017). Finger tracking reveals the covert stages of mental arithmetic. <em>Open Mind: Discoveries in Cognitive Science</em>, 1(1), 30-41. <a href="https://www.mitpressjournals.org/doi/pdf/10.1162/OPMI_a_00003" class="paper" target="_blank">pdf</a></p>
-	
 	<p><strong>2016</strong></p>
 
-	<p>Borghesani*, V., de Hevia*, L., Viarouge*, A., <strong>Pinheiro-Chagas, P.</strong>, Eger, E., Piazza, M. (2016). Comparing magnitudes across dimensions: a univariate and multivariate approach. International Workshop on Pattern Recognition in Neuroimaging (PRNI), 1-4. <a href="borghesani_prni_2016.pdf" class="paper" target="_blank">pdf</a></p>
+	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016) Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review.</em> <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p><strong>2014</strong></p>
+	<p><strong>2015</strong></p>
 
-	<p><strong>Pinheiro-Chagas, P. </strong>Wood, G., Knops, A., Krinzinger, H., Lonnemann, J., Starling-Alves, I., Willmes, K., Haase, V. G. (2014). In how many ways is the approximate number system associated with exact calculation? <em>PLoS One</em>, 19, 9(11), e111155. <a href="http://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0111155&type=printable" class="paper" target="_blank">pdf</a></p>
-	
-	<p>Carvalho, M. R., Vianna, G., Oliveira, L., Costa, A. J., <strong>Pinheiro-Chagas, P.</strong>, Sturzenecker, R., Zen, P. R., Rosa, R. F., de Aguiar, M. J., Haase, V. G. (2014). Are 22q11.2 distal deletions associated with math difficulties? <em>American Journal of Medical Genetics Part A</em>, 164A(9), 2256-62. <a href="carvalho_2014.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em> <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>.
 
-	<p>Haase, V. G., Júlio-Costa, A., Lopes-Silva, J. B., Starling-Alves, I., Antunes, A. M., <strong>Pinheiro-Chagas, P.</strong>, Wood, G. (2014). Contributions from specific and general factors to unique deficits: two cases of mathematics learning difficulties. <em>Frontiers in Psychology</em>, 13, 5-102. <a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2014.00102/pdf" class="paper" target="_blank">pdf</a></p>
+	<p><strong>In prep</strong></p>
 
-	<p>Moura, R., Wood, G., <strong>Pinheiro-Chagas, P.</strong>, Lonnemann, J., Krinzinger, H., Willmes, K., Haase, V. G. (2014). Transcoding abilities in typical and atypical mathematics achievers: the role of working memory and procedural and lexical competencies.  <em>Journal of Experimental Child Psychology</em>, 116(3), 707-27. <a href="moura_2013.pdf" class="paper" target="_blank">pdf</a></p>
+	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. SES influences on brain development: The origins of cognitive reserve? <em> In prep </em>
 
-	<p><strong>2012</strong></p>
-	
-	<p>Ferreira, F. O., Costa, D. S., Micheli, L. R., Oliveira, L. F., <strong>Pinheiro-Chagas, P.</strong>, Haase, V. G. (2012). Educational Achievement Test: Normative data for a representative sample of elementary school children. <em>Psychology & Neuroscience,</em> 5(2), 157-164.</p>
-
-	<p>Wood, G., <strong>Pinheiro-Chagas, P.</strong>, Júlio-Costa, A., Micheli, L. R., Krinzinger, H., Kaufmann, L., Willmes, K., Haase, V. G. (2012). Math anxiety in elementary school children: cross-cultural comparison between Germany and Brazil. <em>Child Development Research</em>, 1-10. <a href="http://psycnet.apa.org/fulltext/2012-35338-005.pdf" class="paper" target="_blank">pdf</a></p>
-
-	<p>Haase, V. G., Júlio-Costa, A., <strong>Pinheiro-Chagas, P.</strong>, Oliveira, L. F., Micheli, L. R., Wood, G. (2012). Math Self-assessment, but not Negative Feelings, predicts Mathematics Performance of Elementary School Children. <em>Child Development Research</em>, 1-10. <a href="http://downloads.hindawi.com/journals/cdr/2012/982672.pdf" class="paper" target="_blank">pdf</a></p>
-	
-	<p>Ferreira, F. O., <strong>Pinheiro-Chagas, P.</strong>, Wood, G., Lohnemann, , Krinzinger,H., Willmes, K., Haase, V. G. (2012). Explaining arithmetic performance from symbolic and nonsymbolic magnitude processing: differences and similarities between typical and low achieving children. <em>Psychology & Neuroscience</em>, 5(1), 37-46. <a href="http://psycnet.apa.org/fulltext/2013-07342-006.pdf" class="paper" target="_blank">pdf</a></p>
-	
-	<p><strong>2011</strong></p>
-
-	<p>Costa, A. J., Silva, J. B. L., <strong>Pinheiro-Chagas, P.</strong>, Krinzinger,, Lohnemann, J., Willmes, K., Wood, G., Haase, V. G. (2011). A hand full of numbers: a role for offloading in arithmetics learning? <em>Frontiers in Psychology</em>, 12;2:368. <a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2011.00368/pdf" class="paper" target="_blank">pdf</a></p>
-
-    <br> 
-    <br> 
+    <br>
+    <br>
 	<p><i>PDFs are provided to ensure timely dissemination of academic work. They can be downloaded for noncommercial, information purposes only, and may not be reposted without permission from the respective copyright holders.</i></p>
 
 	</div>
