--- a/publications/index.html
+++ b/publications/index.html
@@ -17,7 +17,7 @@ Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional
 
 	<p><strong>2015</strong></p>
 
-	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em> <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>.
+	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em> <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>In prep</strong></p>
 
