changed CV page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ layout: default
 <div class="blurb">
 	<h2>Ursula A. Tooley</h2>
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
-	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width= "200" alt="Ursula">
+	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width="150" alt="Ursula">
 
-	<p> I'm a graduate student at the University of Pennsylvania under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Danielle Bassett</b></a>, studying the development of functional brain networks, learning and exploration in childhood, and applications of graph theory. </p>
+	<p>   I am a neuroscience Ph.D. student at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>, under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Danielle Bassett</b></a> in the Complex Systems Group. </p>
 
-	<p>	I'm particularly interested in effects of the early environment on brain development.</p>
-	<p>How do brain networks reconfigure during development? To what extent do the functional parcels and networks detectable in children correspond to those found in adults? Is the topography of these networks in children associated with early experiences or cognition? When and how do children begin to detect higher-order structure in temporal sequences? What neural processes support these representations, and are they affected by early life experiences? </p>
+	<p>   I am interested in the development of functional brain networks, effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>
 
+	<p> I graduated in the spring of 2014 from the University of Arizona with a B.S. in Neuroscience. From 2011 to 2014, I worked in the lab of <a href="https://mddlab.faculty.arizona.edu" class="ext" target="_blank"><b>Dr. Jamie Edgin</b></a>, examining longitudinal effects of sleep disruption on cognition in children with Down syndrome.</p>
 		<!--  <p> I use a combination of machine learning applied to time-resolved brain signals (MEG & intracranial EEG), electrical brain stimulation and continuous behavioral measures
 	<a href="https://trajtracker.wixsite.com/trajtracker" class="ext" target="_blank">(<b>trajectory-tracking</b>).</a></p>
 
