--- a/publications/index.html
+++ b/publications/index.html
@@ -6,10 +6,10 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-	<p><strong>2018</strong></p>
+	<p><strong>2019</strong></p>
 
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
-Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional brain network development. ArXiv:1807.07687 <em>Under revision</em>, <a href="https://arxiv.org/abs/1807.07687" class="ext" target="_blank">link</a></p>
+Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional brain network development. <em>Cerebral Cortex</em>. In press. <a href="https://arxiv.org/abs/1807.07687" class="ext" target="_blank">link</a></p>
 
 	<p><strong>2016</strong></p>
 
