--- a/publications/index.html
+++ b/publications/index.html
@@ -13,11 +13,11 @@ Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional
 
 	<p><strong>2016</strong></p>
 
-	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016) Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review.</em> <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
+	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016) Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review</em>, 70, 369-374. <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>2015</strong></p>
 
-	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em> <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>In prep</strong></p>
 
