--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@ layout: default
 	<p><strong>2019</strong></p>
 
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
-Satterthwaite, T. D., Bassett, D. S. Influence of neighborhood SES on functional brain network development. <em>Cerebral Cortex</em>. bhz066. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
+Satterthwaite, T. D., Bassett, D. S. Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>. bhz066. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>2016</strong></p>
 
