added motion paper

--- a/publications/index.html
+++ b/publications/index.html
@@ -21,8 +21,9 @@ Satterthwaite, T. D., Bassett, D. S. Associations between neighborhood SES and f
 
 	<p><strong>In prep</strong></p>
 
-	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. SES influences on brain development: The origins of cognitive reserve? <em> In prep </em>
+	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. Developmental origins of cognitive reserve. <em> In prep </em></p>
 
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> In prep </em></p>
     <br>
     <br>
 	<p><i>PDFs are provided to ensure timely dissemination of academic work. They can be downloaded for noncommercial, information purposes only, and may not be reposted without permission from the respective copyright holders.</i></p>
