added hidden poster link

--- a/cv/index.html
+++ b/cv/index.html
@@ -5,19 +5,18 @@ layout: default
 
 	<div class="cv">
 		<h2>CV</h2>
-
-		<ul>
-		<li><strong>University of Pennsylvania, USA</strong> (2016 - present)<br />&nbsp; &nbsp; &nbsp;<em>Ph.D., Neuroscience </em><br />&nbsp; &nbsp; &nbsp;PI: Allyson Mackey <br />&nbsp; &nbsp; &nbsp;Co-PI: Danielle Bassett &nbsp;</li>
-		</ul>
-		<ul>
-		<li><strong>University of Oregon & Harvard Center on the Developing Child</strong> (2014-2016) <br />&nbsp; &nbsp; &nbsp;<em>Frontiers of Innovation Project Team Lead</em><br />&nbsp; &nbsp; &nbsp;Supervisor: Phillip Fisher</em></li>
-		</ul>
-		<ul>
-		<li><strong>University of Arizona, USA</strong> (2014) <br />&nbsp; &nbsp; &nbsp;<em>B.S., Neuroscience</em><br />&nbsp; &nbsp; &nbsp;Thesis advisor: Jamie Edgin</li>
-		</ul>
-		<ul>
-		<li><strong>Beijing Institute of Education, China</strong> (2011)<br />&nbsp; &nbsp; &nbsp;<em>Certificate in Chinese Language</em></li>
-		</ul>
-		<p style="text-align: center;"><br />+++ <a class="paper" title="Download full CV" href="ursula_tooley_cv.pdf">Download full CV</a> +++</p>
-
+		<embed src="ursula_tooley_cv.pdf" type="application/pdf" width="100%" height="600px" />
 	</div>
+
+	<!--  <ul>
+	<li><strong>University of Pennsylvania, USA</strong> (2016 - present)<br />&nbsp; &nbsp; &nbsp;<em>Ph.D., Neuroscience </em><br />&nbsp; &nbsp; &nbsp;PI: Allyson Mackey <br />&nbsp; &nbsp; &nbsp;Co-PI: Danielle Bassett &nbsp;</li>
+	</ul>
+	<ul>
+	<li><strong>University of Oregon & Harvard Center on the Developing Child</strong> (2014-2016) <br />&nbsp; &nbsp; &nbsp;<em>Frontiers of Innovation Project Team Lead</em><br />&nbsp; &nbsp; &nbsp;Supervisor: Phillip Fisher</em></li>
+	</ul>
+	<ul>
+	<li><strong>University of Arizona, USA</strong> (2014) <br />&nbsp; &nbsp; &nbsp;<em>B.S., Neuroscience</em><br />&nbsp; &nbsp; &nbsp;Thesis advisor: Jamie Edgin</li>
+	</ul>
+	<ul>
+	<li><strong>Beijing Institute of Education, China</strong> (2011)<br />&nbsp; &nbsp; &nbsp;<em>Certificate in Chinese Language</em></li>
+	</ul> --->
