--- a/publications/index.html
+++ b/publications/index.html
@@ -11,20 +11,20 @@ layout: default
 		<br>
 		While children in high-SES neighborhoods start out with lower levels of brain network segregation, by age 22, they show higher levels of segregation than youth in low-SES neighborhoods, a pattern that is suggestive of faster brain development in the youth in high-SES neighborhoods. These effects were strongest in areas of the brain important for judgment, motivation, and both sensory and motor processing. Our findings shed light on the relationships between intrinsic brain networks and age, and on how the local environment might shape these relationships, underscoring the importance of the neighborhood during development.
 
-	<p><strong>Publication list</strong></p>
+	<p><strong>Publications list</strong></p>
 
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
 Satterthwaite, T. D., Bassett, D. S. (2019) Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>. bhz066. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016) Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review</em>, 70, 369-374. <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development </em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development</em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>In prep</strong></p>
 
-	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. Developmental origins of cognitive reserve. <em> In prep </em></p>
+	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. Developmental origins of cognitive reserve. <em> In prep. </em></p>
 
-	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> In prep </em></p>
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> In prep. </em></p>
     <br>
 	<p><i>PDFs are provided to ensure timely dissemination of academic work. They can be downloaded for noncommercial, information purposes only, and may not be reposted without permission from the respective copyright holders.</i></p>
 
