changed title of review in prep

--- a/publications/index.html
+++ b/publications/index.html
@@ -22,7 +22,7 @@ Satterthwaite, T. D., Bassett, D. S. (2019) Associations between neighborhood SE
 
 	<p><strong>In prep</strong></p>
 
-	<p><strong>Tooley, U.A.</strong> & Mackey, A.P. Developmental origins of cognitive reserve. <em> In prep. </em></p>
+	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. Environmental influences on the pace of brain development: Implications for education and health. <em> In prep. </em></p>
 
 	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> In prep. </em></p>
     <br>
