--- a/publications/index.html
+++ b/publications/index.html
@@ -20,11 +20,19 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 
 	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development</em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
+	<p><strong>Submitted/Under Review</strong></p>
+
+	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. Environmental influences on the pace of brain development: Implications for education and health. <em> Under review. </em></p>
+
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Under review. </em></p>
+
+	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity. <em> Under review. </em></p>
+
+	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Under review. </em></p>
+
 	<p><strong>In prep</strong></p>
 
-	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. Environmental influences on the pace of brain development: Implications for education and health. <em> In prep. </em></p>
-
-	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> In prep. </em></p>
+	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional network community structure in development. <em> In prep. </em></p>
     <br>
 	<p><i>PDFs are provided to ensure timely dissemination of academic work. They can be downloaded for noncommercial, information purposes only, and may not be reposted without permission from the respective copyright holders.</i></p>
 
