--- a/publications/index.html
+++ b/publications/index.html
@@ -13,6 +13,8 @@ layout: default
 
 	<p><strong>Publications list</strong></p>
 
+	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity.  <em>Developmental Cognitive Neuroscience</em>, 30(1), 1-19. <a href="Park et al. - 2021 - Early childhood stress is associated with blunted.pdf" class="paper" target="_blank">pdf</a></p>
+
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
 Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>, 30(1), 1-19. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
 
@@ -22,11 +24,9 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 
 	<p><strong>Submitted/Under Review</strong></p>
 
-	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. Environmental influences on the pace of brain development: Implications for education and health. <em> Under review. </em></p>
+	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. Environmental influences on the pace of brain development <em> Under review. </em></p>
 
-	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Under review. </em></p>
-
-	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity. <em> Under review. </em></p>
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Under revision. </em></p>
 
 	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Under review. </em></p>
 
