update cv, add new pub pdfs

--- a/publications/index.html
+++ b/publications/index.html
@@ -5,11 +5,14 @@ layout: default
 
 	<div class="publications">
 		<h2>Publications</h2>
-  <p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> <a href="https://www.biorxiv.org/content/10.1101/2020.09.04.282269v1">bioRxiv:preprint</a></p>
 
-	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. (2021). Environmental influences on the pace of brain development. <em> Nature Reviews Neuroscience. </em> Accepted. </p>
+  <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em> <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity.  <em>Developmental Cognitive Neuroscience</em>, 30(1), 1-19. <a href="Park et al. - 2021 - Early childhood stress is associated with blunted.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> <a href="https://www.biorxiv.org/content/10.1101/2020.09.04.282269v1">bioRxiv:preprint</a></p>
+
+	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. (2021). Environmental influences on the pace of brain development. <em> Nature Reviews Neuroscience, </em> 22, 372–384. <a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">pdf</a></p>
+
+	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity.  <em>Developmental Cognitive Neuroscience</em>, 47:100909. <a href="Park et al. - 2021 - Early childhood stress is associated with blunted.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
 Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>, 30(1), 1-19. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
@@ -21,8 +24,6 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 	<p><strong>Submitted or under review</strong></p>
 
 	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Submitted. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.01.21.427677v1">bioRxiv:preprint</a> </p>
-
-	<p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Under review. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.03.22.436513v1">bioRxiv:preprint</a> </p>
 
 	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Under revision. </em> <a href="https://www.biorxiv.org/content/10.1101/2020.05.04.072868v1">bioRxiv:preprint</a> </p>
 
