--- a/publications/index.html
+++ b/publications/index.html
@@ -6,9 +6,11 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-  <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em> <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Neuroimage </em> 118408. <a href="Mahadevan et al. - 2021 - Evaluating the sensitivity of functional connectiv.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> <a href="https://www.biorxiv.org/content/10.1101/2020.09.04.282269v1">bioRxiv:preprint</a></p>
+  <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em>  118(24) e2105304118. <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
+
+	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> 18, 775-778. <a href="https://doi.org/10.1016/j.neuroimage.2021.118408">link</a></p>
 
 	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. (2021). Environmental influences on the pace of brain development. <em> Nature Reviews Neuroscience, </em> 22, 372–384. <a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">pdf</a></p>
 
@@ -23,11 +25,17 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 
 	<p><strong>Submitted or under review</strong></p>
 
-	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Submitted. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.01.21.427677v1">bioRxiv:preprint</a> </p>
+	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> In revision. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.01.21.427677v2">bioRxiv:preprint</a> </p>
 
-	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Under revision. </em> <a href="https://www.biorxiv.org/content/10.1101/2020.05.04.072868v1">bioRxiv:preprint</a> </p>
+	<p>Boroshok A.L., Park A.T., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="x">bioRxiv:preprint</a> </p>
+
+	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep</em> </p>
 
 	<p><strong>Selected publications</strong></p>
+	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
+	<a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
+	We suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity.
+
 	<img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
 	<a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">	Associations between neighborhood SES and functional brain network development.</a> <em>Cerebral Cortex</em> (2020). It is intuitively obvious to anyone who has watched a child turn into a teenager that our brains undergo vast changes as we grow up. But how might these changes differ for a child living in Brooklyn as compared to a child living in Detroit? Our recent work finds that intrinsic brain networks become more segregated, or clustered into subgroups, as children get older, and that the socioeconomic status (SES) of the neighborhood they live in affects this process. We found that youth living in high-SES neighborhoods show stronger age-related changes in brain network segregation than youth living in low-SES neighborhoods.
 	<br>
