revise pubs page

--- a/publications/index.html
+++ b/publications/index.html
@@ -29,13 +29,14 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 
 	<p>Boroshok A.L., Park A.T., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="x">bioRxiv:preprint</a> </p>
 
-	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep</em> </p>
+	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep.</em> </p>
 
 	<p><strong>Selected publications</strong></p>
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
 	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.
-
+	<br>
+	<br>
 	<img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
 	<a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">	Associations between neighborhood SES and functional brain network development.</a> <em>Cerebral Cortex</em> (2020). It is intuitively obvious to anyone who has watched a child turn into a teenager that our brains undergo vast changes as we grow up. But how might these changes differ for a child living in Brooklyn as compared to a child living in Detroit? Our recent work finds that intrinsic brain networks become more segregated, or clustered into subgroups, as children get older, and that the socioeconomic status (SES) of the neighborhood they live in affects this process. We found that youth living in high-SES neighborhoods show stronger age-related changes in brain network segregation than youth living in low-SES neighborhoods.
 	<br>
