--- a/publications/index.html
+++ b/publications/index.html
@@ -27,7 +27,7 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 
 	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> In revision. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.01.21.427677v2">bioRxiv:preprint</a> </p>
 
-	<p>Boroshok A.L., Park A.T., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="x">bioRxiv:preprint</a> </p>
+	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.11.08.467831v2">bioRxiv:preprint</a> </p>
 
 	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep.</em> </p>
 
