--- a/publications/index.html
+++ b/publications/index.html
@@ -6,6 +6,8 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
+	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Neuroimage </em> 118843. <a href="Tooley et al. - 2022 - Functional brain network community structure in ch.pdf" class="paper" target="_blank">pdf</a> </p>
+
 	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Neuroimage </em> 118408. <a href="Mahadevan et al. - 2021 - Evaluating the sensitivity of functional connectiv.pdf" class="paper" target="_blank">pdf</a></p>
 
   <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em>  118(24) e2105304118. <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
