--- a/publications/index.html
+++ b/publications/index.html
@@ -6,28 +6,26 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Neuroimage </em> 118843. <a href="Tooley et al. - 2022 - Functional brain network community structure in ch.pdf" class="paper" target="_blank">pdf</a> </p>
+	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. (2022). Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Neuroimage </em> 118843. <a href="Tooley et al. - 2022 - Functional brain network community structure in ch.pdf" class="paper" target="_blank">pdf</a> </p>
 
-	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Neuroimage </em> 118408. <a href="Mahadevan et al. - 2021 - Evaluating the sensitivity of functional connectiv.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. (2021). Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Neuroimage </em> 118408. <a href="Mahadevan et al. - 2021 - Evaluating the sensitivity of functional connectiv.pdf" class="paper" target="_blank">pdf</a></p>
 
-  <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em>  118(24) e2105304118. <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
+  <p>McDermott, C.L., Hilton, K., Park, A.T., <strong> Tooley, U.A. </strong>, Boroshok, A.L., Mupparapu, M., Scott, A.M., Bumann, E.E., Mackey, A.P. (2021). Early life stress is associated with earlier emergence of permanent molars. <em> Proceedings of the National Academy of Sciences. </em>  118(24) e2105304118. <a href="McDermott et al. - 2021 - Early life stress is associated with earlier emerg.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> 18, 775-778. <a href="https://doi.org/10.1016/j.neuroimage.2021.118408">link</a></p>
+	<p>Cieslak, M., Cook, P.A., He, X., Yeh, F.H., Dhollander, T., Adebimpe, A., ... <strong> Tooley, U.A. </strong>, . & Satterthwaite, T.D. (2021). QSIPrep: A robust and unified workflow for preprocessing and reconstructing diffusion MRI. <em> Nature Methods. </em> 18, 775-778. <a href="https://doi.org/10.1016/j.neuroimage.2021.118408">link</a></p>
 
 	<p><strong>Tooley, U.A.</strong>, Bassett, D.S., & Mackey, A.P. (2021). Environmental influences on the pace of brain development. <em> Nature Reviews Neuroscience, </em> 22, 372–384. <a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. Early childhood stress is associated with blunted development of ventral tegmental area connectivity.  <em>Developmental Cognitive Neuroscience</em>, 47:100909. <a href="Park et al. - 2021 - Early childhood stress is associated with blunted.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Park, A. T., <strong> Tooley, U.A. </strong>, Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2021). Early childhood stress is associated with blunted development of ventral tegmental area connectivity.  <em>Developmental Cognitive Neuroscience</em>, 47:100909. <a href="Park et al. - 2021 - Early childhood stress is associated with blunted.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>Tooley, U.A.</strong>, Mackey, A. P., Ciric, R., Ruparel, K., Moore, T. M., Gur, R. C., Gur, R. E.,
-Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>, 30(1), 1-19. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
+Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood SES and functional brain network development. <em>Cerebral Cortex</em>, 30(1), 1-19. <a href="Tooley et al. - Associations between Neighborhood SES and Function.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016) Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review</em>, 70, 369-374. <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
+	<p> <strong>Tooley, U.</strong>, Makhoul, Z., & Fisher, P.A. (2016). Nutritional status of foster children: implications for cognitive and behavioral development. <em> Children and Youth Services Review</em>, 70, 369-374. <a href="Tooley_Nutritional_Status_of_Foster_Children_2016.pdf" class="paper" target="_blank">pdf</a></p>
 
-	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015) Sleep disturbance and expressive language development in preschool-age children. <em> Child Development</em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
+	<p>Edgin, J.O., <strong>Tooley, U.</strong>, Demara, B., Nyhuis, C., Anand, P., & Spano, G. (2015). Sleep disturbance and expressive language development in preschool-age children. <em> Child Development</em>, 86(6), 1984-1998. <a href="Edgin_sleep_disturbance_2015.pdf" class="paper" target="_blank">pdf</a></p>
 
 	<p><strong>Submitted or under review</strong></p>
-
-	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> In revision. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.01.21.427677v2">bioRxiv:preprint</a> </p>
 
 	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.11.08.467831v2">bioRxiv:preprint</a> </p>
 
@@ -37,6 +35,9 @@ Satterthwaite, T. D., Bassett, D. S. (2020) Associations between neighborhood SE
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
 	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
+	<br>
+	<u> Press </u>
+	<a href="https://www.wsj.com/articles/what-children-lose-when-their-brains-develop-too-fast-11639071752?reflink=desktopwebshare_permalink">What Children Lose When Their Brains Develop Too Fast </a> Wall Street Journal, Dec 9, 2021, Alison Gopnik
 	<br>
 	<br>
 	<p><img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
