--- a/publications/index.html
+++ b/publications/index.html
@@ -35,9 +35,8 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
 	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
-	<br>
 	<u> Press </u> <br>
-	<a href="https://www.wsj.com/articles/what-children-lose-when-their-brains-develop-too-fast-11639071752?reflink=desktopwebshare_permalink">What Children Lose When Their Brains Develop Too Fast </a> Wall Street Journal, Dec 9, 2021, Alison Gopnik
+	<a href="https://www.wsj.com/articles/what-children-lose-when-their-brains-develop-too-fast-11639071752?reflink=desktopwebshare_permalink">What Children Lose When Their Brains Develop Too Fast</a>. Wall Street Journal, Dec 9, 2021, Alison Gopnik
 	<br>
 	<br>
 	<p><img src="twitter_fig_2.jpg" class="paper" align="right" width="400" alt="schematic_tooley">
