--- a/publications/index.html
+++ b/publications/index.html
@@ -31,7 +31,7 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep.</em> </p>
 
-	<p><strong> <font size="+2"> Selected publications</font></strong></p>
+	<p> <font size="+2"> Selected publications</font></p>
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
 	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
