adding austin's paper

--- a/publications/index.html
+++ b/publications/index.html
@@ -6,6 +6,8 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
+	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>, Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans.<em> npj Science of Learning, 7, 14.</em> <a href="Boroshok et al. - 2022 - Individual differences in frontoparietal plasticit.pdf" class="paper" target="_blank">pdf</a> </p>
+
 	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. (2022). Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Neuroimage. </em> 118843. <a href="Tooley et al. - 2022 - Functional brain network community structure in ch.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p>Mahadevan, A.S., <strong> Tooley, U.A. </strong>, Bertolero, M.A., Mackey A.P., & Bassett, D.S. (2021). Evaluating the sensitivity of functional connectivity measures to motion artifact in resting-state fMRI data. <em> Neuroimage. </em> 118408. <a href="Mahadevan et al. - 2021 - Evaluating the sensitivity of functional connectiv.pdf" class="paper" target="_blank">pdf</a></p>
@@ -27,9 +29,11 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p><strong>Submitted or under review</strong></p>
 
-	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>,Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans. <em> Under review. </em> <a href="https://www.biorxiv.org/content/10.1101/2021.11.08.467831v2">bioRxiv:preprint</a> </p>
+	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em> Under review.</em> <a href="https://www.biorxiv.org/content/10.1101/2022.07.07.499176v1">preprint</a></p>
 
-	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em>In prep.</em> </p>
+	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Under revision</em>. <a href="https://psyarxiv.com/gdp5v/">preprint</a></p>
+
+	<p>McDermott, C.L., Lee, J., Park, A.T., <strong>Tooley, U.A.</strong>, Boroshok, A.L., Hilton, K., Mupparapu, M., Mackey, A.P. Molar eruption timing is associated with cognitive development. <em>Under review. </em> <a href="https://psyarxiv.com/t2qg5/">preprint</a></p>
 
 	<p> <font size="+2"> Selected publications</font></p>
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
