--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
 	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width="150" alt="Ursula">
 
-	<p>   I recieved my Ph.D. in Neuroscience at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>, under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Dani Bassett</b></a> in the Complex Systems Group. </p>
+	<p>   I recieved my Ph.D. in Neuroscience in 2022 at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>, under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Dani Bassett</b></a> in the Complex Systems Group. </p>
 
 	<p>   I am interested in the development of functional brain networks, effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>
 
