modify description for postdoc

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@ layout: default
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
 	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width="150" alt="Ursula">
 
-	<p>   I recieved my Ph.D. in Neuroscience in 2022 at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>, under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and <a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Dani Bassett</b></a> in the Complex Systems Group. </p>
+	<p>   I am currently a postdoc at Washington University in St. Louis, investigating neonatal and toddler brain development, under the direction of Drs. Cynthia Rogers and Chris Smyser. My research examines the
+		development of functional brain networks, with a specific focus on the pace of brain maturation and how neuroplasticity changes across development.
+		I am interested in effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>
 
-	<p>   I am interested in the development of functional brain networks, effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>
+	<p> 	I recieved my Ph.D. in Neuroscience in 2022 at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>,
+		under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and
+		<a href="https://complexsystemsupenn.com" class="ext" target="_blank"><b>Dr. Dani Bassett</b></a> in the Complex Systems Group. </p>
+
+	<!--  <p>   My research examines the development of functional brain networks, with a specific focus on the pace of brain maturation and how neuroplasticity changes across development.
+		I am interested in effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>-->
 
 	<p> I graduated in the spring of 2014 from the University of Arizona with a B.S. in Neuroscience. From 2011 to 2014, I worked in the lab of <a href="https://mddlab.faculty.arizona.edu" class="ext" target="_blank"><b>Dr. Jamie Edgin</b></a>, examining longitudinal effects of sleep disruption on cognition in children with Down syndrome.</p>
 		<!--  <p> I use a combination of machine learning applied to time-resolved brain signals (MEG & intracranial EEG), electrical brain stimulation and continuous behavioral measures
