modify description for postdoc 2

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@ layout: default
 	<!--<img src="/figures/pedro_4.jpg" class = "responsive" alt="Pedro" width="700.0297" height="249.7774"> -->
 	<img src="/figures/Ursula_Tooley_Honeys.jpg" class = "responsive" align="left" width="150" alt="Ursula">
 
-	<p>   I am currently a postdoc at Washington University in St. Louis, investigating neonatal and toddler brain development, under the direction of Drs. Cynthia Rogers and Chris Smyser. My research examines the
-		development of functional brain networks, with a specific focus on the pace of brain maturation and how neuroplasticity changes across development.
-		I am interested in effects of the early environment on brain development, learning and exploration in childhood, and applications of graph theory. </p>
+	<p>   I am currently a postdoc at 	<a href="https://www.mir.wustl.edu/" class="ext" target="_blank"><b>Washington University in St. Louis</b></a>, working under the direction of
+		<a href="https://wunderlab.wustl.edu/" class="ext" target="_blank"><b>Dr. Cynthia Rogers and Dr. Chris Smyser</b></a>. My research examines the
+	 functional brain network development in neonates and toddlers, with a focus on the pace of brain maturation and how neuroplasticity changes during development.
+		I am also interested in effects of the early environment on brain development. </p>
 
 	<p> 	I recieved my Ph.D. in Neuroscience in 2022 at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>,
 		under the direction of <a href="http://www.allysonmackey.com" class="ext" target="_blank"><b>Dr. Allyson Mackey</b></a> in the Changing Brain Lab and
