--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 	<p>   I am currently a postdoc at 	<a href="https://www.mir.wustl.edu/" class="ext" target="_blank"><b>Washington University in St. Louis</b></a>, working under the direction of
 		<a href="https://wunderlab.wustl.edu/" class="ext" target="_blank"><b>Dr. Cynthia Rogers and Dr. Chris Smyser</b></a>. My research examines the
-	 functional brain network development in neonates and toddlers, with a focus on the pace of brain maturation and how neuroplasticity changes during development.
+	 functional brain network development in neonates and toddlers, with a focus on the pace of brain maturation and how neuroplasticity changes across development.
 		I am also interested in effects of the early environment on brain development. </p>
 
 	<p> 	I recieved my Ph.D. in Neuroscience in 2022 at the <a href="https://www.med.upenn.edu/ngg/" class="ext" target="_blank"><b>University of Pennsylvania</b></a>,
