--- a/publications/index.html
+++ b/publications/index.html
@@ -6,9 +6,9 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2022). The age of reason: Functional brain network development during childhood. <em> The Journal of Neuroscience.</em> 42(44):8237–8251. <a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">pdf</a> </p>
+	<p><strong> Tooley, U.A.</strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2022). The age of reason: Functional brain network development during childhood. <em> The Journal of Neuroscience.</em> 42(44):8237–8251. <a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">pdf</a> </p>
 
-	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. (2022). Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Developmental Cognitive Neuroscience</em>. <a href="Park et al. - 2022 - Early stressful experiences are associated.pdf" class="paper" target="_blank">pdf</a> </p>
+	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. (2022). Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Developmental Cognitive Neuroscience</em>. 57:101152. <a href="Park et al. - 2022 - Early stressful experiences are associated.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p> Richie-Halford, A., Cieslak, M., Ai, L. ... The Fibr Community Science Consortium including <strong>Tooley, U.A.</strong> ... Satterthwaite, T. D., & Rokem, A. (2022). An analysis-ready and quality controlled resource for pediatric brain white-matter research. <em> Scientific Data.</em> 9, 616. <a href="Richie-Halford et al., An analysis-ready and quality controlled resource for pediatric brain white-matter research.pdf" class="paper" target="_blank">pdf</a> </p>
 
