adding flux talk link

--- a/talks/index.html
+++ b/talks/index.html
@@ -8,6 +8,9 @@ layout: default
 		 <a href="https://www.pathlms.com/ohbm/courses/12238/sections/15845/video_presentations/137922" class="ext" target="_blank"><b>Associations between neighborhood SES and functional brain network development.</b></a>
 		 This talk was given at the Organization for Human Brain Mapping in Rome (2019).
 		 <br>
+		 <a href="https://www.youtube.com/watch?v=92WV4GAfByk" class="ext" target="_blank"><b>The age of reason: Functional brain network development during childhood.</b></a>
+		 This talk was given at Flux Congress in Paris (2022).
+
 		 <br>
 		 <br>
 	</div>
